feat: firebase auth

--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
-REACT_APP_FIREBASE_KEY="AIzaSyDz8qPMeVV7QC7DIHq27CmrnsMr24XvSXU"
-REACT_APP_FIREBASE_DOMAIN="balsa-project.firebaseapp.com"
-REACT_APP_FIREBASE_PROJECT_ID="balsa-project"
-REACT_APP_FIREBASE_STORAGE_BUCKET="balsa-project.appspot.com"
-REACT_APP_FIREBASE_SENDER_ID="1096413393430"
-REACT_APP_FIREBASE_APP_ID="1:1096413393430:web:8255cf2e90c539e9a67b37"
-REACT_APP_FIREBASE_MEASUREMENT_ID="G-60X1DF8BYN"
-
+REACT_APP_FIREBASE_API_KEY = "AIzaSyDz8qPMeVV7QC7DIHq27CmrnsMr24XvSXU"
+REACT_APP_FIREBASE_AUTH_DOMAIN = "balsa-project.firebaseapp.com"
+REACT_APP_FIREBASE_PROJECT_ID = "balsa-project"
+REACT_APP_FIREBASE_STORAGE_BUCKET = "balsa-project.appspot.com"
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID = "1096413393430"
+REACT_APP_FIREBASE_APP_ID = "1:1096413393430:web:8255cf2e90c539e9a67b37"
+REACT_APP_FIREBASE_MEASUREMENT_ID = "G-60X1DF8BYN"
